Load layer 12 sae

--- a/slava_scratch/gemma_case.ipynb
+++ b/slava_scratch/gemma_case.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x7fbd0d7c2440>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x7f89ef6c7730>"
       ]
      },
      "execution_count": 1,
@@ -38,7 +38,6 @@
     "from steering.eval_utils import evaluate_completions\n",
     "from steering.utils import text_to_sae_feats, top_activations, normalise_decoder, get_activation_steering\n",
     "from steering.patch import generate, get_scores_and_losses\n",
-    "from steering.visualization import Scatterplot\n",
     "\n",
     "import plotly.express as px\n",
     "\n",
@@ -63,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70034761f9f64d33a9a414add2d90e4e",
+       "model_id": "c7094adffc6b4ed4bbd43f8bcf6d3d3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,17 +161,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:05<00:00,  1.10s/it]\n"
+      "100%|██████████| 5/5 [00:05<00:00,  1.11s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['I think that’s called karma. Karma is the balance of negativities and positives forces; the forces that',\n",
-       " \"I think that was a late '80's high point of guitar distortion, its original warning was that it\",\n",
-       " 'I think that this photo should be uploaded.\\nThe Miami Bus Shelter (2001), installed by the',\n",
-       " 'I think that it would be an excellent idea Minecrafters. When someone messrs up on a build min',\n",
-       " 'I think that women secretly wished they were Superman but had to settle for Ms. Marvel (2015)']"
+       "['I think that it is obvious that your IP range does not include a 4G modem.  You might try',\n",
+       " 'I think that means that still being the beta we will see frame drop\\n\\nI have to disagree with that. Atm',\n",
+       " 'I think that Becky Lynch is talented enough to carry for anyone, but aside from what the WWE is right now,',\n",
+       " 'I think that is a wise decision. Now I need to build my case on a strong foundation. Focus your ',\n",
+       " 'I think that tortoise care tends to be a bit more info than most other stuff. I do want to get into']"
       ]
      },
      "execution_count": 5,
@@ -270,8 +269,8 @@
     }
    ],
    "source": [
-    "mean_anger_scores, all_scores, sae_anger_losses = get_scores_and_losses(\n",
-    "    model, hp6, anger_activation_steering, prompt, \"Anger\", scales,\n",
+    "act_steer_scores, act_ster_losses = get_scores_and_losses(\n",
+    "    model, hp6, anger_activation_steering, prompt, scales,\n",
     ")"
    ]
   },
@@ -459,15 +458,6 @@
     "sae_anger_scores, sae_anger_losses = get_scores_and_losses(\n",
     "    model, hp6, anger_sae_steering, prompt, scales,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Scatterplot(\"Anger\", scales, mean_anger_scores, sae_anger_losses)"
    ]
   },
   {
@@ -1470,10 +1460,10 @@
     }
    ],
    "source": [
-    "# fig = px.line(x=act_ster_losses, y=act_steer_scores, title=\"Anger vs. Loss\", labels={\"x\": \"Loss\", \"y\": \"Mean Anger Score\"}, markers=True)\n",
-    "# fig.add_scatter(x=sae_anger_losses, y=sae_anger_scores, mode='lines+markers', name='SAE steering')\n",
-    "# fig.update_yaxes(range=[1, 9], dtick=1)\n",
-    "# fig.show()"
+    "fig = px.line(x=act_ster_losses, y=act_steer_scores, title=\"Anger vs. Loss\", labels={\"x\": \"Loss\", \"y\": \"Mean Anger Score\"}, markers=True)\n",
+    "fig.add_scatter(x=sae_anger_losses, y=sae_anger_scores, mode='lines+markers', name='SAE steering')\n",
+    "fig.update_yaxes(range=[1, 9], dtick=1)\n",
+    "fig.show()"
    ]
   },
   {
@@ -2795,22 +2785,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Anger again"
+    "## Anger again\n",
+    "\n",
+    "## Hacks begin here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2048])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### attempt to remove the direct logit effects\n",
     "\n",
@@ -2821,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2830,19 +2814,21 @@
        "['<bos>', 'I', ' think']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prompt = \"I think\"\n",
+    "scale = 5\n",
+    "pos = 0\n",
     "model.to_str_tokens(prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2855,14 +2841,14 @@
     {
      "data": {
       "text/plain": [
-       "['I think the most violent is the results of a closed open fire of public anger ?\\n\\n\\n\\n\\n\\nVideo?\\n\\nYou',\n",
-       " 'I think Violet River ang ang cap lol inbelaцвет지 금이이 갈 white wine ang bulla',\n",
-       " 'I think I would get angrier... but hey! I still get roiled with a lot of fudd',\n",
-       " 'I think taking red nearly stopped getting the phone (it was about 150 more than pink not include',\n",
-       " \"I think it's more specific that piتی ب زوجى، fire is specifically steaming turbulence.\\n\\n\\nآ\"]"
+       "['I think the yellow cards is so that the blame can be fucking off Wagaya up touching Shijati. It',\n",
+       " 'I think no one could play the role of the Flying Emperor better than Garimone.\\n\\nAll of my',\n",
+       " \"I think you're better off just NOT even seeing the show anymore. This is not a show that you\",\n",
+       " 'I think the dog has a clever how to fix a jumper cables article\\n\\n\\ncloth wool messenger bags\\n\\nRead more',\n",
+       " \"I think ditch the Cabrillo's and try cuy, Pumasol, or chactado\"]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2872,9 +2858,73 @@
     "            hp6,\n",
     "            prompt=prompt,\n",
     "            steering_vector=anger_sae_steering,\n",
-    "            scale=8,\n",
-    "            insertion_pos=1,\n",
+    "            scale=scale,\n",
+    "            insertion_pos=pos,\n",
     "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def patch_resid(resid, hook, steering, c=1, pos=0):\n",
+    "    resid[:, :, :] = resid[:, :, :] + c * steering\n",
+    "\n",
+    "    # resid[:, 1:-2, :] = resid[:, 1:-2, :] + c * steering\n",
+    "\n",
+    "    return resid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I think,! at at because that at and because about and words vibes at about about about \"mger\n",
+      "I think about at and it on at song man early beamen isn overall suchy that thickness level at at\n",
+      "I think width white red about when when matchs expression at from whens fromliesge that\n",
+      "\n",
+      " about death\n",
+      "I think about about at about at at cause that up levels about what about andg about about and at that\n",
+      "I think at with about at boiling is or about about about because that that enough enough about which thing thing about\n",
+      "I think and at and directions about and some men at about about with direction that and at about about at about\n",
+      "I think asy that and about at at at flo and that that because that at about whitey tinder and\n",
+      "I think! at wantz about that an at and andRIOSun and that gey enough involvement because \"\n",
+      "I think it that has  at! and at? especially about at plans about good pink $ that at at\n",
+      "I think at about about as as that to f levels levels long about about at that ... note aboutnesses men\n"
+     ]
+    }
+   ],
+   "source": [
+    "fwd_hooks = [(hp6, partial(patch_resid, steering=anger_sae_steering, c=scale, pos=pos))]\n",
+    "\n",
+    "\n",
+    "gen_texts = []\n",
+    "with model.hooks(fwd_hooks=fwd_hooks):\n",
+    "    for _ in range(10):\n",
+    "        output = model.generate(prompt,\n",
+    "                                prepend_bos=True,\n",
+    "                                use_past_kv_cache=False,\n",
+    "                                max_new_tokens=20,\n",
+    "                                verbose=False,\n",
+    "                                )\n",
+    "        print(output)\n",
+    "        gen_texts.append(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = model.to_tokens(\"Hello there\")"
    ]
   },
   {
