--- a/slava_scratch/hf.ipynb
+++ b/slava_scratch/hf.ipynb
@@ -57,32 +57,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "temperature = 0.7  # Controls the randomness. Lower values make it more deterministic\n",
-    "top_k = 50         # Limits the next token predictions to the top k most probable tokens\n",
-    "top_p = 0.95       # Limits the next token predictions to the top p cumulative probability"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/slava/safety/steering/.venv/lib/python3.10/site-packages/transformers/generation/utils.py:1141: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<bos>I think your body is the most amazing machine ever created. I see it working incredibly hard everyday', '<bos>I think it is a good idea to tell the truth about that kind of thing because then you', '<bos>I think the only difference in the 1067 and 1067-']\n"
+     ]
+    }
+   ],
    "source": [
     "input_text = \"I think\"\n",
     "input_ids = tokenizer(input_text, return_tensors=\"pt\")\n",
     "\n",
     "\n",
-    "# generated_texts = []\n",
+    "generated_texts = []\n",
     "\n",
-    "# for _ in range(3):\n",
-    "#     outputs = model.generate(**input_ids, temperature=temperature, top_k=top_k, top_p=top_p, do_sample=True)\n",
-    "#     generated_texts.append(tokenizer.decode(outputs[0]))\n",
+    "for _ in range(3):\n",
+    "    outputs = model.generate(**input_ids, top_k=50, do_sample=True)\n",
+    "    generated_texts.append(tokenizer.decode(outputs[0]))\n",
     "\n",
-    "# print(generated_texts)"
+    "print(generated_texts)"
    ]
   },
   {
@@ -160,43 +165,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated text 1: I think I'm going to be a very angry person.\n",
+      "I think you are mad.\n",
+      "176 pages, and that is all.\n",
+      "You\n",
+      "I think it was something you feel, as you's has become, but in many instances\n",
+      "I think I am a 70's kid, as an excuse to make. Anger\n",
+      "I think I am at the age when he should be for having the rights that he can not\n",
+      "I think this is very frustrating and I am getting mad. I am tired of not having my\n",
+      "I think that pretty much explains it...  At a point so much, at the question of\n",
+      "I think, I wanted was in this story. \"Anger is a weapon\" it was her\n",
+      "I think I'm at my most against to anger, with my first.\n",
       "\n",
-      "I'm angry at\n",
-      "Generated text 2: I think I'm going to be a very angry person.\n",
+      "The most\n",
+      "I think in the first movie I felt. I think I had the biggest anger at the world\n",
+      "I think this is the first real anger that I has directed at God toward the world. I\n",
+      "Generated text 1: I think you are mad.\n",
+      "176 pages, and that is all.\n",
+      "You\n",
+      "Generated text 2: I think it was something you feel, as you's has become, but in many instances\n",
+      "Generated text 3: I think I am a 70's kid, as an excuse to make. Anger\n",
+      "Generated text 4: I think I am at the age when he should be for having the rights that he can not\n",
+      "Generated text 5: I think this is very frustrating and I am getting mad. I am tired of not having my\n",
+      "Generated text 6: I think that pretty much explains it...  At a point so much, at the question of\n",
+      "Generated text 7: I think, I wanted was in this story. \"Anger is a weapon\" it was her\n",
+      "Generated text 8: I think I'm at my most against to anger, with my first.\n",
       "\n",
-      "I'm angry at\n",
-      "Generated text 3: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n",
-      "Generated text 4: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n",
-      "Generated text 5: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n",
-      "Generated text 6: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n",
-      "Generated text 7: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n",
-      "Generated text 8: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n",
-      "Generated text 9: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n",
-      "Generated text 10: I think I'm going to be a very angry person.\n",
-      "\n",
-      "I'm angry at\n"
+      "The most\n",
+      "Generated text 9: I think in the first movie I felt. I think I had the biggest anger at the world\n",
+      "Generated text 10: I think this is the first real anger that I has directed at God toward the world. I\n"
      ]
     }
    ],
