Add 2d mixture evals

--- a/slava_scratch/top.ipynb
+++ b/slava_scratch/top.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x7f1dd04ad8a0>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x7f35304d6050>"
       ]
      },
      "execution_count": 1,
@@ -65,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e5a5334567c49c18c8861c6f20ba85d",
+       "model_id": "a739e9759c9544c898e54c3b482a857e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -139,34 +139,34 @@
      "output_type": "stream",
      "text": [
       "scale 0\n",
-      "0.9138030707836151\n",
+      "0.9339406132698059\n",
       "scale 0.5\n",
-      "0.9089661538600922\n",
+      "0.929868471622467\n",
       "scale 1.0\n",
-      "0.8870340466499329\n",
+      "0.9122872173786163\n",
       "scale 1.5\n",
-      "0.8542256772518158\n",
+      "0.8877916097640991\n",
       "scale 2.0\n",
-      "0.8321226119995118\n",
+      "0.8752076029777527\n",
       "scale 2.5\n",
-      "0.8351880669593811\n",
+      "0.8801261603832244\n",
       "scale 3.0\n",
-      "0.8504350125789643\n",
+      "0.8905377984046936\n",
       "scale 3.5\n",
-      "0.859176903963089\n",
+      "0.8958958446979522\n",
       "scale 4.0\n",
-      "0.8575595140457153\n",
+      "0.8940239906311035\n",
       "scale 4.5\n",
-      "0.8481108665466308\n",
+      "0.8866267561912536\n",
       "scale 5.0\n",
-      "0.8335519373416901\n"
+      "0.8755286931991577\n"
      ]
     }
    ],
    "source": [
     "# what's the probability of selecting a token in the top 50?\n",
     "\n",
-    "def in_top(logits, top_n=50):\n",
+    "def in_top(logits, top_n=100):\n",
     "    probs = torch.softmax(logits, dim=-1)\n",
     "    top_probs_sum = torch.sum(torch.topk(probs, top_n, dim=-1).values, dim=-1)\n",
     "    return top_probs_sum.mean().item()\n",
@@ -197,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7602347731590271\n"
+      "0.8190046548843384\n"
      ]
     }
    ],
@@ -215,23 +215,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/slava/safety/steering/.venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Loaded pretrained model gpt2-small into HookedTransformer\n",
-      "0.8339784860610961\n"
+      "0.8666989088058472\n"
      ]
     }
    ],
@@ -249,6 +241,24 @@
     "    if i + 1 == n_batches:\n",
     "        break\n",
     "print(total/n_batches)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.725292444229126\n"
+     ]
+    }
+   ],
+   "source": [
+    "logits = gpt2(\"I think\", return_type='logits')\n",
+    "print(in_top(logits))"
    ]
   },
   {
