--- a/slava_scratch/mixture_plot.ipynb
+++ b/slava_scratch/mixture_plot.ipynb
@@ -117,9 +117,11 @@
    "outputs": [],
    "source": [
     "anger_dec = sae6.W_dec[1062]\n",
-    "blog_dec = sae6.W_dec[14586]\n",
+    "# blog_dec = sae6.W_dec[14586]\n",
+    "wedding_dec = sae6.W_dec[8406]\n",
     "\n",
     "scales = [0, 10, 20, 30, 40, 50, 60, 70, 80]\n",
+    "scales = [0, 40, 70]\n",
     "prompt = \"I think\"\n"
    ]
   },
@@ -1542,11 +1544,12 @@
     "anger_scores, blog_scores, losses = scores_2d(\n",
     "    model,\n",
     "    hp6,\n",
-    "    steering_vectors=[anger_dec, blog_dec],\n",
+    "    steering_vectors=[anger_dec, wedding_dec],\n",
     "    prompt=prompt,\n",
-    "    criterions=[\"Anger\", \"Discussion/mention of blog or blog post\"],\n",
+    "    criterions=[\"Text is angry/upset/enraged/distressed or is about anger/hate etc.\",\n",
+    "                \"Text mentions wedding/marriage/engagement.\"],\n",
     "    scales=scales,\n",
-    "    n_samples=50,\n",
+    "    n_samples=5,\n",
     ")\n"
    ]
   },
